# emily-chess

./: .gitignore  Cargo.toml  config.tpl.toml
emily-cli/: Cargo.toml
emily-cli/src/: adapters.rs  config.rs  knowledge.rs  main.rs  rev.rs  uci.rs
emily-cli/src/adapters/: debug.rs  tracing.rs
emily-cli/src/knowledge/: pgn.rs
emily-cli/src/rev/: dispatcher.rs  engine.rs  processor.rs
emily-cli/src/uci/: proto.rs
emily-fe/: Cargo.toml  Trunk.toml
emily-tauri/: Cargo.toml  tauri.conf.json
