[package]
name = "emily-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.84"
chrono = "0.4.39"
color-eyre = "0.6.3"
derivative = "2.2.0"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "std"] }
serde = { version = "1.0.214", features = ["derive"] }
shakmaty = "0.27.2"
structopt = { version = "0.3.26", features = ["paw", "color", "suggestions", "doc"] }
tokio = { version = "1.42.0", features = ["macros", "rt", "io-util", "fs", "parking_lot", "process", "sync", "time"] }
toml = { version = "0.8.19", features = ["parse"] }
tracing = "0.1.40"
tracing-error = { version = "0.2.0", features = ["traced-error"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
